Relay session journals from AgentD [task: 04_agentd/02_journal-sync.md]